[package]
name = "lcd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"              # Library for ANSI terminal colours and styles (bold, underline)
term_size = "1.0.0-beta1"         # functions for determining terminal sizes and dimensions
